--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -6,16 +6,31 @@
 	map_data="{LD maps/Life.map}"
 	next_scenario=Insanity
 
-	turns=40
+	turns=30
 	victory_when_enemies_defeated=no
 
 	{DEFAULT_MUSIC_PLAYLIST}
 	{COMMON_DEATHS}
 	{DEFAULT_SCHEDULE_MORNING}
 
+	[lua]
+		code=<<
+			function life_pack(types, size, x, y)
+				for _=1,size do
+					wexlfu.map.put_unit_vacant{
+						side = 3,
+						type = wexlfu.math.choice_w(types),
+						x = x,
+						y = y,
+					}
+				end
+			end
+		>>
+	[/lua]
+
 	[side]
 		{SIDE_1}
-		gold=150
+		gold=100
 		fog=yes
 		shroud=yes
 	[/side]
@@ -54,6 +69,9 @@
 		name=prestart
 		{RECALL_LOYALS_4}
 
+		{GENERIC_UNIT 2 Wose 15 43}
+		{GENERIC_UNIT 2 Wose 17 44}
+
 		{GENERIC_UNIT 2 (Elvish Avenger) 27 34}
 		{GENERIC_UNIT 2 (Elvish Avenger) 27 38}
 
@@ -83,26 +101,11 @@
 				}) do
 					wexlfu.map.put_unit_vacant{
 						side = 3,
-						type = wexlfu.math.choice_w{{"Wose", 3}, {"Elder Wose", 2}, {"Ancient Wose", 1}},
+						type = wexlfu.math.choice_w{{"Wose", 6}, {"Elder Wose", 3}, {"Ancient Wose", 1}},
 						x = v[1],
 						y = v[2],
 						ai_special = "guardian",
 					}
-				end
-			>>
-		[/lua]
-
-		[lua]
-			code=<<
-				function life_pack(types, size, x, y)
-					for _=1,size do
-						wexlfu.map.put_unit_vacant{
-							side = 3,
-							type = wexlfu.math.choice_w(types),
-							x = x,
-							y = y,
-						}
-					end
 				end
 			>>
 		[/lua]
@@ -159,7 +162,7 @@
 
 		[message]
 			speaker=Twinkle
-			message= _ "I smell hunters nearby."
+			message= _ "I smell hunters nearby, watch out!"
 		[/message]
 
 		[set_variable]
@@ -187,7 +190,7 @@
 
 			[message]
 				speaker=Morri
-				message= _ "Perhaps. Abari was buried over half a century ago, and in the time since then it is possible the dark power, whatever it may be, shifted the deepest parts of the tomb to here and left behind only a portal. It then built this valley, and through some means gained the support of these elves. There is certainly much power here to keep this valley so lush. Unfortunantely, Cain did not mention any specifics about the dark power or anything of this place."
+				message= _ "Perhaps. Abari was buried over half a century ago, and in the time since then it is possible the dark power, whatever it may be, shifted the deepest parts of the tomb to here and left behind only a portal. It then built this valley, and through some means gained the support of these elves. There is certainly much power infusing this place and keeping it lush. Unfortunantely, Cain did not mention any specifics about the dark power or anything of this place."
 			[/message]
 
 			[message]
@@ -265,7 +268,7 @@
 
 		[message]
 			speaker=Ceradia
-			message= _ "And where do you come from? I know you are necromancers."
+			message= _ "Where do you come from? I know you are necromancers."
 		[/message]
 
 		[message]
@@ -275,7 +278,7 @@
 
 		[message]
 			speaker=Ceradia
-			message= _ "You claim to be from Thar-Nella. Then you have come to the Valley of Life seeking the Holy One, Abari, is this not so?"
+			message= _ "Since you claim to be from Thar-Nella, then you surely have come to the Valley of Life seeking the Holy One, Abari. Is this not so?"
 		[/message]
 
 		[message]
