--- a/_main.cfg
+++ b/_main.cfg
@@ -55,6 +55,10 @@ data/add-ons/Zeth_in_the_Underland#enddef
 [/binary_path]
 
 {./utils}
+[units]
+	{./units}
+[/units]
+
 {./maps}
 {./scenarios}
 #endif
