--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -347,7 +347,7 @@
 
 			[message]
 				speaker=Zeth
-				message= _ "Let's go underground again."
+				message= _ "Follow me, we go underground again."
 			[/message]
 
 			[message]
