--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -36,6 +36,15 @@
 		{FLAG_VARIANT ragged}
 	[/side]
 
+	[side]
+		side=3
+		controller=ai
+		team_name=Enemy
+		user_team_name= _ "Hostiles"
+
+		hidden=true
+	[/side]
+
 	[event]
 		name=prestart
 		{RECALL_LOYALS_4}
