--- a/units/brain.cfg
+++ b/units/brain.cfg
@@ -5,7 +5,7 @@
 	race=monster
 	image="units/brain.png"
 	hitpoints=100
-	movement_type=treefolk
+	movement_type=largefoot
 	[resistance]
 		blade=100
 		pierce=100
@@ -14,7 +14,7 @@
 		fire=100
 		arcane=120
 	[/resistance]
-	movement=0
+	movement=2
 	experience=150
 	level=3
 	alignment=chaotic
