--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -26,7 +26,7 @@
 		user_team_name= _ "Hostiles"
 
 		type=Brain
-		recruit=Floating Eye
+		recruit=Floating Eye,Eyestalk
 		canrecruit=yes
 
 		gold=100
