--- a/units/brain.cfg
+++ b/units/brain.cfg
@@ -22,7 +22,7 @@
 	{AMLA_DEFAULT}
 	cost=30
 	usage=archer
-	description= _ "These swollen creatures are birthed from minds that dwell in darkness."
+	description= _ "These swollen creatures are birthed from minds that dwell in darkness."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_REGENERATES}
 	{DEFENSE_ANIM "units/brain.png" "units/brain.png" hiss-hit.wav}
 	die_sound=hiss-die.wav
 	[abilities]
