--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -45,53 +45,242 @@
 		hidden=true
 	[/side]
 
+	[side]
+		side=4
+		controller=ai
+		team_name=Enemy
+		user_team_name= _ "Statues"
+
+		hidden=true
+	[/side]
+
+	# Like Caves of the Basilisk
+	#define PETRIFIED
+		[+unit]
+			random_traits=no
+			generate_name=no
+
+			[status]
+				petrified=yes
+			[/status]
+
+			[modifications]
+				[trait]
+					id=no_metadata
+					[effect]
+						apply_to=hitpoints
+						increase_total=-100%
+					[/effect]
+					[effect]
+						apply_to=movement
+						set=0
+					[/effect]
+					[effect]
+						apply_to=ellipse
+						ellipse=none
+					[/effect]
+				[/trait]
+			[/modifications]
+		[/unit]
+	#enddef
+
 	[event]
 		name=prestart
 		{RECALL_LOYALS_4}
+
+		{GENERIC_UNIT 4 (General) 10 2} {PETRIFIED}
+		{GENERIC_UNIT 4 (Orcish Warlord) 12 2} {PETRIFIED}
+		{GENERIC_UNIT 4 (Mermaid Siren) 10 6} {PETRIFIED}
+		{GENERIC_UNIT 4 (Arch Mage) 12 6} {PETRIFIED}
 	[/event]
 
-	#define DOOR trigger door suffix
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			[filter_location]
+				[filter_adjacent_location]
+					[filter]
+						side=4
+					[/filter]
+				[/filter_adjacent_location]
+			[/filter_location]
+		[/filter]
+
+		[message]
+			speaker=Zeth
+			message= _ "Strange statues."
+		[/message]
+	[/event]
+
+	#define DOOR door
 		[event]
 			name=moveto
 			[filter]
 				side=1
-				x,y={trigger}
+				[filter_location]
+					[filter_adjacent_location]
+						x,y={door}
+					[/filter_adjacent_location]
+				[/filter_location]
 			[/filter]
 
 			[sound]
 				name=open-chest.wav
 			[/sound]
 
+			[store_locations]
+				x,y={door}
+				variable=open_door
+			[/store_locations]
+
 			[terrain]
 				x,y={door}
 				layer=overlay
-				terrain="^Pr{suffix}o"
+				terrain="$open_door.terrain|o"
 			[/terrain]
 
 			{ENSURE_VIEW}
 		[/event]
 	#enddef
 
-	{DOOR 26,4 27,5 /}
-	{DOOR 34,17 35,17 \}
-	{DOOR 39,16 40,15 \}
-	{DOOR 45,13 46,12 \}
-	{DOOR 48,10 49,10 \}
-	{DOOR 52,5 52,4 |}
+	{DOOR 27,5}
+	{DOOR 35,17}
+	{DOOR 40,15}
+	{DOOR 46,12}
+	{DOOR 49,10}
+	{DOOR 52,4}
 
-	[event]
-		name=start
-
+	#define OBJECTIVES win
 		[objectives]
 			[objective]
 				condition=win
-				description= _ "Press onward."
+				{win}
 			[/objective]
 			{COMMON_LOSSES}
 			{CARRYOVER_OBJECTIVE 40 yes}
 			[note]
 				description= _ "Some doors can be opened, move a unit next to them."
 			[/note]
+			[note]
+				description= _ "Humans and drakes will suffer mental damage each turn, this cannot kill them."
+			[/note]
 		[/objectives]
+	#enddef
+
+	[event]
+		name=start
+
+		[message]
+			speaker=Morri
+			message= _ "We are certainly near the source of all this power. My temple is throbbing due to the proximity."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "I can feel invisible things crawling over me."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "You think that's bad. I can see invisible things in the corners of my eyes."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "You are not learned enough to shield yourself from the ambient radiation of a place like this. Be careful, your resilience may suffer."
+		[/message]
+
+		[if]
+			[have_unit]
+				id=Ked
+			[/have_unit]
+
+			[then]
+				[message]
+					speaker=Ked
+					message= _ "No trouble for me!"
+				[/message]
+
+				[message]
+					speaker=Morri
+					message= _ "Indeed, the mental capacity of a troll will save it from the effects of ambient radiation."
+				[/message]
+
+				[message]
+					speaker=Ked
+					message= _ "Hit nail on head!"
+				[/message]
+			[/then]
+		[/if]
+
+		{OBJECTIVES (description= _ "Press onward through the tomb.")}
+	[/event]
+
+	[event]
+		name=new turn
+		first_time_only=no
+
+		[harm_unit]
+			[filter]
+				side=1
+				race=human,drake
+				[not]
+					id=Morri
+				[/not]
+			[/filter]
+			amount=2
+			kill=no
+		[/harm_unit]
+	[/event]
+
+	[event]
+		name=turn 2
+
+		[message]
+			speaker=Morri
+			message= _ "Be on your guard, I feel as if something is trying to get past my protection charms."
+		[/message]
+	[/event]
+
+	[event]
+		name=turn 3
+
+		{FLASH_RED ()}
+
+		[message]
+			speaker=Morri
+			message= _ "Zeth! I'm being pulled out. You must-"
+		[/message]
+
+		{FLASH_RED ()}
+		[animate_unit]
+			flag=pre_teleport
+			[filter]
+				id=Morri
+			[/filter]
+		[/animate_unit]
+
+		[kill]
+			id=Morri
+			animate=no
+		[/kill]
+
+		[message]
+			speaker=Zeth
+			message= _ "Master Morri! No, she's gone."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "What do we do now, Zeth? The gates are shut."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "We have to leave this place, at least. Come on, we don't have time to waste. We're breaking through!"
+		[/message]
+
+		{OBJECTIVES (description= _ "Get out.")}
 	[/event]
 [/scenario]
