--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -268,12 +268,12 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "Master Morri! No, she's gone."
+			message= _ "Master Morri! No!"
 		[/message]
 
 		[message]
 			speaker=Twinkle
-			message= _ "What do we do now, Zeth? The gates are shut."
+			message= _ "She's gone. What do we do now, Zeth? The gates are shut!"
 		[/message]
 
 		[message]
@@ -283,4 +283,6 @@
 
 		{OBJECTIVES (description= _ "Get out.")}
 	[/event]
+
+	#undef OBJECTIVES
 [/scenario]
