--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -389,4 +389,6 @@
 			message= _ "The path is open. Quickly, jump down here, you will fall slowly!"
 		[/message]
 	[/event]
+
+	#undef OBJECTIVES
 [/scenario]
