More Insanity dialogue.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -92,6 +92,9 @@
 		{GENERIC_UNIT 4 (Orcish Warlord) 12 2} {PETRIFIED}
 		{GENERIC_UNIT 4 (Mermaid Siren) 10 6} {PETRIFIED}
 		{GENERIC_UNIT 4 (Arch Mage) 12 6} {PETRIFIED}
+
+		{GENERIC_UNIT 4 (Naga Myrmidon) 24 11} {PETRIFIED}
+		{GENERIC_UNIT 4 (Dune Spearmaster) 29 17} {PETRIFIED}
 	[/event]
 
 	[event]
@@ -278,10 +281,51 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "We have to leave this place, at least. Come on, we don't have time to waste. We're breaking through!"
+			message= _ "We have to leave this place. Come on, we don't have time to waste. We're breaking through, and then we're finding Master Morri!"
 		[/message]
 
 		{OBJECTIVES (description= _ "Get out.")}
+	[/event]
+
+	[event]
+		name=turn 4
+
+		[message]
+			speaker=narrator
+			caption= _ "A Surrounding Voice"
+			message= _ "Sacrifices must be made. Do not resist the tomb of Abari."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "Now the tomb is talking!"
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Ignore it, we have to stay focused."
+		[/message]
+
+		[event]
+			name=sighted
+			[filter]
+				side=2
+			[/filter]
+			[filter_second]
+				side=1
+			[/filter_second]
+
+			[message]
+				speaker=narrator
+				caption= _ "A Surrounding Voice"
+				message= _ "Behold the vision of darkness."
+			[/message]
+
+			[message]
+				speaker=Zeth
+				message= _ "I've seen these floating eyes before, summoned by a master mage. Be careful around them, especially you, Twinkle."
+			[/message]
+		[/event]
 	[/event]
 
 	#undef OBJECTIVES
