--- a/_main.cfg
+++ b/_main.cfg
@@ -1,24 +1,14 @@
 #textdomain wesnoth-ZitU
 
-#define ZITU_DATAPATH
-data/add-ons/Zeth_in_the_Underland#enddef
+#NAME: Zeth_in_the_Underland
+#MACRO: ZITU
+#WEXLFU: 2
 
-#define ZITU_LOADPATH
-~add-ons/Zeth_in_the_Underland#enddef
+{./wexlfu_preload.cfg}
 
 [textdomain]
 	name="wesnoth-ZitU"
 	path={ZITU_DATAPATH}/translations
-[/textdomain]
-
-[textdomain]
-    name="wesnoth-Wexlfu"
-#ifhave ./Wexlfu/loader.cfg
-    path={ZITU_DATAPATH}/Wexlfu/translations
-#endif
-#ifhave ~add-ons/Wexlfu
-    path="data/add-ons/Wexlfu/translations"
-#endif
 [/textdomain]
 
 [campaign]
@@ -45,14 +35,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 [/campaign]
 
 #ifdef CAMPAIGN_ZITU
-#define LD path
-{{ZITU_LOADPATH}/{path}}#enddef
-
-{./wexlfu.cfg}
-
-[binary_path]
-    path={ZITU_DATAPATH}/
-[/binary_path]
+{./wexlfu_load.cfg}
 
 {./utils}
 [units]
@@ -64,5 +47,5 @@ data/add-ons/Zeth_in_the_Underland#enddef
 #endif
 
 #ifdef EDITOR
-{./wexlfu.cfg}
+{./wexlfu_load.cfg}
 #endif
