--- a/wexlfu_load.cfg
+++ b/wexlfu_load.cfg
@@ -19,3 +19,6 @@ data/add-ons/Wexlfu#enddef
 #ifndef WXFU
 #error Unable to locate Wexlfu.
 #endif
+
+#define LD path
+{{ZITU_LOADPATH}/{path}}#enddef
