--- a/wexlfu_load.cfg
+++ b/wexlfu_load.cfg
@@ -1,24 +1,26 @@
-# Wexlfu available separately.
-#ifhave ~add-ons/Wexlfu/loader.cfg
+#ifdef ZITU_WEXLFU_GLOBAL
+
 #define WXFU_CONFIG_BINARY_PATH
 data/add-ons/Wexlfu#enddef
 #define WXFU_CONFIG_PREFIX
 ~add-ons/Wexlfu#enddef
-{~add-ons/Wexlfu/loader.cfg}
-#else
-# Built in Wexlfu.
-#ifhave ./Wexlfu/loader.cfg
+
+#endif
+
+#ifdef ZITU_WEXLFU_LOCAL
+
 #define WXFU_CONFIG_BINARY_PATH
 {ZITU_DATAPATH}/Wexlfu#enddef
 #define WXFU_CONFIG_PREFIX
 {ZITU_LOADPATH}/Wexlfu#enddef
-{./Wexlfu/loader.cfg}
-#endif
+
 #endif
 
-#ifndef WXFU
-#error Unable to locate Wexlfu.
-#endif
+{{WXFU_CONFIG_PREFIX}/loader.cfg}
 
 #define LD path
 {{ZITU_LOADPATH}/{path}}#enddef
+
+[binary_path]
+	path={ZITU_DATAPATH}/
+[/binary_path]
