--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -4,17 +4,31 @@ data/add-ons/Zeth_in_the_Underland#enddef
 #define ZITU_LOADPATH
 ~add-ons/Zeth_in_the_Underland#enddef
 
-[textdomain]
-	name="wesnoth-ZitU"
-	path={ZITU_DATAPATH}/translations
-[/textdomain]
+#ifhave ~add-ons/Wexlfu/version.cfg
+	{~add-ons/Wexlfu/version.cfg}
+	#ifdef WXFU_2
+		#define ZITU_WEXLFU_GLOBAL
+		#enddef
+	#endif
+#endif
+
+#ifndef ZITU_WEXLFU_GLOBAL
+	#ifhave ./Wexlfu/version.cfg
+		#define ZITU_WEXLFU_LOCAL
+		#enddef
+	#endif
+#endif
+
+#ifndef WXFU
+	#error Unable to locate Wexlfu.
+#endif
 
 [textdomain]
-    name="wesnoth-Wexlfu"
-#ifhave ./Wexlfu/loader.cfg
-    path={ZITU_DATAPATH}/Wexlfu/translations
+	name="wesnoth-Wexlfu"
+#ifdef ZITU_WEXLFU_LOCAL
+	path={ZITU_DATAPATH}/Wexlfu/translations
 #endif
-#ifhave ~add-ons/Wexlfu
-    path="data/add-ons/Wexlfu/translations"
+#ifdef ZITU_WEXLFU_GLOBAL
+	path="data/add-ons/Wexlfu/translations"
 #endif
 [/textdomain]
