--- a/_main.cfg
+++ b/_main.cfg
@@ -2,7 +2,7 @@
 
 #NAME: Zeth_in_the_Underland
 #MACRO: ZITU
-#WEXLFU: 3
+#WEXLFU: 4
 
 {./wexlfu_preload.cfg}
 
@@ -36,6 +36,13 @@
 
 #ifdef CAMPAIGN_ZITU
 {./wexlfu_load.cfg}
+
+#define LD path
+{{ZITU_LOADPATH}/{path}}#enddef
+
+[binary_path]
+	path={ZITU_DATAPATH}/
+[/binary_path]
 
 {./utils}
 [units]
