--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -14,6 +14,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 
 #ifndef ZITU_WEXLFU_GLOBAL
 	#ifhave ./Wexlfu/version.cfg
+		{./Wexlfu/version.cfg}
 		#define ZITU_WEXLFU_LOCAL
 		#enddef
 	#endif
@@ -32,3 +33,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 	path="data/add-ons/Wexlfu/translations"
 #endif
 [/textdomain]
+
+#ifdef EDITOR
+	{./wexlfu_load.cfg}
+#endif
