--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -14,14 +14,15 @@ data/add-ons/Zeth_in_the_Underland#enddef
 
 #ifndef ZITU_WEXLFU_GLOBAL
 	#ifhave ./Wexlfu/version.cfg
-		{./Wexlfu/version.cfg}
 		#define ZITU_WEXLFU_LOCAL
 		#enddef
 	#endif
 #endif
 
-#ifndef WXFU
-	#error Unable to locate Wexlfu.
+#ifndef ZITU_WEXLFU_GLOBAL
+	#ifndef ZITU_WEXLFU_LOCAL
+		#error Unable to locate Wexlfu.
+	#endif
 #endif
 
 [textdomain]
