--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -14,6 +14,10 @@ data/add-ons/Zeth_in_the_Underland#enddef
 
 #ifndef ZITU_WEXLFU_GLOBAL
 	#ifhave ./Wexlfu/version.cfg
+		{./Wexlfu/version.cfg}
+		#ifndef WXFU_4
+			#error Local Wexlfu instance does not match required major version.
+		#endif
 		#define ZITU_WEXLFU_LOCAL
 		#enddef
 	#endif
