Enemies in the recap rooms.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -95,6 +95,37 @@
 
 		{GENERIC_UNIT 4 (Naga Myrmidon) 24 11} {PETRIFIED}
 		{GENERIC_UNIT 4 (Dune Spearmaster) 29 17} {PETRIFIED}
+
+		{GENERIC_UNIT 3 (Troll) 36 15}
+		{GENERIC_UNIT 3 (Blood Bat) 38 15}
+		{GENERIC_UNIT 3 (Draug) 39 18}
+		{GENERIC_UNIT 3 (Banebow) 39 16}
+
+		{GENERIC_UNIT 3 (Fire Guardian) 42 12}
+		{GENERIC_UNIT 3 (Fire Guardian) 42 12}
+		{GENERIC_UNIT 3 (Goblin Impaler) 43 15}
+
+		{GENERIC_UNIT 3 (Soulless) 49 11}
+		[+unit]
+			variation=swimmer
+		[/unit]
+		{GENERIC_UNIT 3 (Soulless) 44 9}
+		[+unit]
+			variation=swimmer
+		[/unit]
+		{GENERIC_UNIT 3 (Water Serpent) 49 11}
+		{GENERIC_UNIT 3 (Water Serpent) 49 11}
+
+		{GENERIC_UNIT 3 (Giant Spider) 54 7}
+		{GENERIC_UNIT 3 (Giant Spider) 54 7}
+		{GENERIC_UNIT 3 (Soulless) 48 6}
+		[+unit]
+			variation=wose
+		[/unit]
+		{GENERIC_UNIT 3 (Soulless) 53 10}
+		[+unit]
+			variation=wose
+		[/unit]
 	[/event]
 
 	[event]
