More Insanity dialogue.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -96,13 +96,15 @@
 		{GENERIC_UNIT 4 (Naga Myrmidon) 24 11} {PETRIFIED}
 		{GENERIC_UNIT 4 (Dune Spearmaster) 29 17} {PETRIFIED}
 
+		{GENERIC_UNIT 4 (Elvish Sylph) 52 2} {PETRIFIED}
+
 		{GENERIC_UNIT 3 (Troll) 36 15}
 		{GENERIC_UNIT 3 (Blood Bat) 38 15}
 		{GENERIC_UNIT 3 (Draug) 39 18}
 		{GENERIC_UNIT 3 (Banebow) 39 16}
 
-		{GENERIC_UNIT 3 (Fire Guardian) 42 12}
-		{GENERIC_UNIT 3 (Fire Guardian) 42 12}
+		{GENERIC_UNIT 3 (Fire Guardian) 42 13}
+		{GENERIC_UNIT 3 (Fire Guardian) 42 13}
 		{GENERIC_UNIT 3 (Goblin Impaler) 43 15}
 
 		{GENERIC_UNIT 3 (Soulless) 49 11}
@@ -180,9 +182,15 @@
 
 	{DOOR 27,5}
 	{DOOR 35,17}
+	[+event]
+		{TOMB_VOICE (_ "See what I have made.")}
+	[/event]
 	{DOOR 40,15}
 	{DOOR 46,12}
 	{DOOR 49,10}
+	[+event]
+		{TOMB_VOICE (_ "Listen to my voice, as many have done before you.")}
+	[/event]
 	{DOOR 52,4}
 
 	#define OBJECTIVES win
@@ -321,11 +329,7 @@
 	[event]
 		name=turn 4
 
-		[message]
-			speaker=narrator
-			caption= _ "A Surrounding Voice"
-			message= _ "Sacrifices must be made. Do not resist the tomb of Abari."
-		[/message]
+		{TOMB_VOICE (_ "Sacrifices must be made. Do not resist the tomb of Abari.")}
 
 		[message]
 			speaker=Twinkle
@@ -346,17 +350,19 @@
 				side=1
 			[/filter_second]
 
-			[message]
-				speaker=narrator
-				caption= _ "A Surrounding Voice"
-				message= _ "Behold the vision of darkness."
-			[/message]
+			{TOMB_VOICE (_ "Behold the vision of darkness.")}
 
 			[message]
 				speaker=Zeth
 				message= _ "I've seen these floating eyes before, summoned by a master mage. Be careful around them, especially you, Twinkle."
 			[/message]
 		[/event]
+	[/event]
+
+	[event]
+		name=turn 7
+
+		{TOMB_VOICE (_ "I cry out from the ground, and all life must listen. Do you hear me?")}
 	[/event]
 
 	#undef OBJECTIVES
