--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -192,6 +192,34 @@
 		{TOMB_VOICE (_ "Listen to my voice, as many have done before you.")}
 	[/event]
 	{DOOR 52,4}
+	[+event]
+		[message]
+			speaker=Zeth
+			message= _ "There is light ahead! The path splits here, there is a crack leading to the outside, and a tunnel going deeper into the tomb."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "Which way do we go?"
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ ""
+		[/message]
+
+		[item]
+			image=items/gohere.png
+			x,y=50,1
+		[/item]
+
+		[item]
+			image=items/gohere.png
+			x,y=60,2
+		[/item]
+
+		{OBJECTIVES (description= _ "Move Zeth to one of the paths.")}
+	[/event]
 
 	#define OBJECTIVES win
 		[objectives]
@@ -303,6 +331,13 @@
 			[/filter]
 		[/animate_unit]
 
+		[store_unit]
+			[filter]
+				id=Morri
+			[/filter]
+			variable=saved_morri
+		[/store_unit]
+
 		[kill]
 			id=Morri
 			animate=no
@@ -320,10 +355,8 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "We have to leave this place. Come on, we don't have time to waste. We're breaking through, and then we're finding Master Morri!"
+			message= _ "We have to leave this place. Come on, we don't have time to waste. We're breaking through, and we'll find Master Morri!"
 		[/message]
-
-		{OBJECTIVES (description= _ "Get out.")}
 	[/event]
 
 	[event]
