--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -357,7 +357,7 @@
 
 			[message]
 				speaker=Neriande
-				message= _ "I will give you final advice, pilgrims. This gate will shut behind you. We will await your return on the other side, but woe unto you if you have neither seen nor touched the Holy One."
+				message= _ "I will give you final advice, pilgrims. This gate will shut behind you. We will await your return on the other side, but woe unto you if you have neither seen nor touched the Holy One. You can only ever enter once."
 			[/message]
 
 			{END_VICTORY yes}
