Move objectives up.

--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -7,8 +7,10 @@ data/add-ons/Zeth_in_the_Underland#enddef
 #ifhave ~add-ons/Wexlfu/version.cfg
 	{~add-ons/Wexlfu/version.cfg}
 	#ifdef WXFU_4
-		#define ZITU_WEXLFU_GLOBAL
-		#enddef
+		#ifver WXFU >= 4.0.4
+			#define ZITU_WEXLFU_GLOBAL
+			#enddef
+		#endif
 	#endif
 #endif
 
@@ -16,7 +18,10 @@ data/add-ons/Zeth_in_the_Underland#enddef
 	#ifhave ./Wexlfu/version.cfg
 		{./Wexlfu/version.cfg}
 		#ifndef WXFU_4
-			#error Local Wexlfu instance does not match required major version.
+			#error Local Wexlfu instance does not match required major version: 4.0.4
+		#endif
+		#ifver WXFU < 4.0.4
+			#error Local Wexlfu instance does not match required minor and sub version: 4.0.4
 		#endif
 		#define ZITU_WEXLFU_LOCAL
 		#enddef
@@ -25,7 +30,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 
 #ifndef ZITU_WEXLFU_GLOBAL
 	#ifndef ZITU_WEXLFU_LOCAL
-		#error Unable to locate Wexlfu.
+		#error Unable to locate appropriate Wexlfu: 4.0.4
 	#endif
 #endif
 
