Insanity implementation; RECALL_LOYALS for Morri state.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -222,7 +222,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ ""
+			message= _ "If we leave the tomb now, we may never be able to complete our task assigned to us. Yet, Master Morri is probably outside, and we don't know what is happening to her. Would she want us to abandon the mission?"
 		[/message]
 
 		[item]
@@ -236,6 +236,52 @@
 		[/item]
 
 		{OBJECTIVES (description= _ "Move Zeth to one of the paths.")}
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			id=Zeth
+			x,y=50,1
+		[/filter]
+
+		[message]
+			speaker=Zeth
+			message= _ "We cannot leave Master Morri alone. Follow me!"
+		[/message]
+
+		[set_variable]
+			name=went_after_morri
+			value=yes
+		[/set_variable]
+
+		{END_VICTORY yes}
+		[+endlevel]
+			next_scenario=Slaughter
+		[/endlevel]
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			id=Zeth
+			x,y=60,2
+		[/filter]
+
+		[message]
+			speaker=Zeth
+			message= _ "As servants of Thar-Nella, we shall not abandon our mission. Follow me!"
+		[/message]
+
+		[set_variable]
+			name=went_after_morri
+			value=no
+		[/set_variable]
+
+		{END_VICTORY yes}
+		[+endlevel]
+			next_scenario=Risen
+		[/endlevel]
 	[/event]
 
 	[event]
@@ -320,7 +366,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "Zeth! I'm being pulled out. You must-"
+			message= _ "Zeth! I'm being pulled out. You must continue-"
 		[/message]
 
 		{FLASH_RED ()}
@@ -336,12 +382,8 @@
 				id=Morri
 			[/filter]
 			variable=saved_morri
+			kill=yes
 		[/store_unit]
-
-		[kill]
-			id=Morri
-			animate=no
-		[/kill]
 
 		[message]
 			speaker=Zeth
