--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -83,6 +83,21 @@
 	[/allow_recruit]
 #enddef
 
+# Post-Morri.
+#define RECALL_LOYALS_5
+	{RECALL_LOYALS_4}
+
+	[kill]
+		id=Morri
+		animate=no
+	[/kill]
+#enddef
+
+# Morri is back.
+#define RECALL_LOYALS_6
+	{RECALL_LOYALS_4}
+#enddef
+
 #define SIDE_1
 	side=1
 	controller=human
