--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -413,7 +413,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "Ignore it, we have to stay focused."
+			message= _ "Try to ignore it. It will hold less power over you if you do not listen."
 		[/message]
 
 		[event]
