Statues turn to ghosts.

--- a/utils/messages.cfg
+++ b/utils/messages.cfg
@@ -1,9 +1,11 @@
 #textdomain wesnoth-ZitU
 
 #define TOMB_VOICE message
-	[message]
-		speaker=narrator
-		caption= _ "A Surrounding Voice"
-		message={message}
-	[/message]
+	{FLASH_WHITE (
+		[message]
+			speaker=narrator
+			caption= _ "A Surrounding Voice"
+			message={message}
+		[/message]
+	)}
 #enddef
