--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -5,7 +5,7 @@
 	name= _ "Insanity"
 	map_data="{LD maps/Insanity.map}"
 
-	turns=20
+	turns=30
 	victory_when_enemies_defeated=no
 
 	{DEFAULT_MUSIC_PLAYLIST}
@@ -14,7 +14,7 @@
 
 	[side]
 		{SIDE_1}
-		gold=100
+		gold=150
 		shroud=yes
 		fog=yes
 	[/side]
@@ -115,15 +115,18 @@
 
 		{GENERIC_UNIT 4 (Elvish Sylph) 52 2} {PETRIFIED}
 
+		# Earth.
 		{GENERIC_UNIT 3 (Troll) 36 15}
 		{GENERIC_UNIT 3 (Blood Bat) 38 15}
 		{GENERIC_UNIT 3 (Draug) 39 18}
 		{GENERIC_UNIT 3 (Banebow) 39 16}
 
+		# Power.
 		{GENERIC_UNIT 3 (Fire Guardian) 42 13}
 		{GENERIC_UNIT 3 (Fire Guardian) 42 13}
 		{GENERIC_UNIT 3 (Goblin Impaler) 43 15}
 
+		# Water.
 		{GENERIC_UNIT 3 (Soulless) 49 11}
 		[+unit]
 			variation=swimmer
@@ -135,6 +138,7 @@
 		{GENERIC_UNIT 3 (Water Serpent) 49 11}
 		{GENERIC_UNIT 3 (Water Serpent) 49 11}
 
+		# Life.
 		{GENERIC_UNIT 3 (Giant Spider) 54 7}
 		{GENERIC_UNIT 3 (Giant Spider) 54 7}
 		{GENERIC_UNIT 3 (Soulless) 48 6}
@@ -146,6 +150,8 @@
 			variation=wose
 		[/unit]
 	[/event]
+
+	#undef PETRIFIED
 
 	[event]
 		name=moveto
@@ -237,6 +243,8 @@
 
 		{OBJECTIVES (description= _ "Move Zeth to one of the paths.")}
 	[/event]
+
+	#undef DOOR
 
 	[event]
 		name=moveto
@@ -438,6 +446,26 @@
 		name=turn 7
 
 		{TOMB_VOICE (_ "I cry out from the ground, and all life must listen. Do you hear me?")}
+
+		[event]
+			name=new turn
+			first_time_only=no
+
+			[lua]
+				code = <<
+					local unit = wexlfu.math.choice(wesnoth.get_units{side = 4, status = "petrified"})
+					if unit then
+						local x = unit.x
+						local y = unit.y
+						wesnoth.erase_unit(unit)
+						wesnoth.put_unit({
+							side = 4,
+							type = wexlfu.math.choice_w{{"Ghost", 3}, {"Wraith", 3}, {"Spectre", 1}},
+						}, x, y)
+					end
+				>>
+			[/lua]
+		[/event]
 	[/event]
 
 	#undef OBJECTIVES
