Petrified unit behaviour fixes.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -161,6 +161,7 @@
 				[filter_adjacent_location]
 					[filter]
 						side=4
+						status=petrified
 					[/filter]
 				[/filter_adjacent_location]
 			[/filter_location]
@@ -455,13 +456,10 @@
 				code = <<
 					local unit = wexlfu.math.choice(wesnoth.get_units{side = 4, status = "petrified"})
 					if unit then
-						local x = unit.x
-						local y = unit.y
-						wesnoth.erase_unit(unit)
 						wesnoth.put_unit({
 							side = 4,
 							type = wexlfu.math.choice_w{{"Ghost", 3}, {"Wraith", 3}, {"Spectre", 1}},
-						}, x, y)
+						}, unit.x, unit.y)
 					end
 				>>
 			[/lua]
