Zeth remarks on phantom statues.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -379,6 +379,7 @@
 		[/message]
 
 		{FLASH_RED ()}
+
 		[animate_unit]
 			flag=pre_teleport
 			[filter]
@@ -456,14 +457,38 @@
 				code = <<
 					local unit = wexlfu.math.choice(wesnoth.get_units{side = 4, status = "petrified"})
 					if unit then
-						wesnoth.put_unit({
+						local u = {
 							side = 4,
 							type = wexlfu.math.choice_w{{"Ghost", 3}, {"Wraith", 3}, {"Spectre", 1}},
-						}, unit.x, unit.y)
+							x = unit.x,
+							y = unit.y,
+						}
+						wesnoth.put_unit(u)
+						wesnoth.fire_event("statue became ghost", u.x, u.y)
 					end
 				>>
 			[/lua]
 		[/event]
+	[/event]
+
+	[event]
+		name=statue became ghost
+		[filter]
+			[filter_vision]
+				side=1
+				visible=yes
+			[/filter_vision]
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "You will not leave."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Watch out, the statue just became a phantom."
+		[/message]
 	[/event]
 
 	#undef OBJECTIVES
