--- a/scenarios/Entombed.cfg
+++ b/scenarios/Entombed.cfg
@@ -64,10 +64,14 @@
 		recruit=Spectre,Ghast,Draug,Banebow
 		canrecruit=yes
 
-		gold=200
+		moves=0
+		max_moves=0
+
+		gold=350
 
 		{FLAG_VARIANT6 ragged}
 	[/side]
+	{STARTING_VILLAGES 4 8}
 
 	[side]
 		side=5
@@ -89,18 +93,181 @@
 	[event]
 		name=prestart
 		{RECALL_LOYALS_5}
+
+		[item]
+			image=items/coffin-closed.png
+			x,y=17,1
+		[/item]
 	[/event]
 
 	[event]
 		name=start
 
+		[message]
+			speaker=Zeth
+			message= _ "This must be where the body of Abari is. Don't you feel the power?"
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "I smell it. I smell many other corpses besides."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Indeed, there are undead here. But in the name of Thar-Nella, we shall fight through them to find Abari."
+		[/message]
+
+		{TOMB_VOICE (_ "Know you not the fate that awaits those who do not submit to the glory of Abari?")}
+
 		[objectives]
 			[objective]
 				condition=win
-				description= _ "Collect the body of Abari."
+				description= _ "Zeth must collect the body of Abari."
 			[/objective]
 			{COMMON_LOSSES}
 			{CARRYOVER_OBJECTIVE 40 yes}
 		[/objectives]
+	[/event]
+
+	[event]
+		name=turn 2
+
+		{TOMB_VOICE (_ "If you will not accept me willingly, then you will remain with me forever.")}
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			id=Zeth
+			x,y=17,1
+		[/filter]
+
+		[message]
+			speaker=Zeth
+			message= _ "Here is the coffin."
+		[/message]
+
+		[remove_item]
+			x,y=17,1
+		[/remove_item]
+
+		[item]
+			image=items/coffin-open.png
+			x,y=17,1
+		[/item]
+
+		[message]
+			speaker=Zeth
+			message= _ "I have the skeleton! Come, let's leave by that passage behind the fortress."
+		[/message]
+
+		{END_VICTORY yes}
+	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Aclira
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "Abari can hold me no longer."
+		[/message]
+
+		{TOMB_VOICE (_ "You take much from me.")}
+	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Azaril
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "There was no life given from him, only everlasting longing."
+		[/message]
+	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Bat
+		[/filter]
+
+		{TOMB_VOICE (_ "Cursed be the land from which the glory of Abari departs!")}
+	[/event]
+
+	[event]
+		name=sighted
+		[filter]
+			id=Bat
+		[/filter]
+		[filter_second]
+			side=1
+		[/filter_second]
+
+		[message]
+			speaker=Zeth
+			message= _ "I think that's the same bat we saw back just under the graveyard."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "You can recognize bats?"
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "This is a special bat, it was summoning weak undead there, but here it is leading a whole horde."
+		[/message]
+
+		{TOMB_VOICE (_ "I am the eternal familiar of Abari. I am many.")}
+
+		[message]
+			speaker=Zeth
+			message= _ "Is it the one talking? Look, bat, we're here for the body of Abari, nothing more."
+		[/message]
+
+		{TOMB_VOICE (_ "Abari is long dead, but his power and glory remain in me. You will take neither the spirit nor the body of Abari from this place.")}
+
+		[message]
+			speaker=Zeth
+			message= _ "You can't stand in my way, in the way of Thar-Nella, bat."
+		[/message]
+
+		{TOMB_VOICE (_ "I am the familiar of Abari. You cannot comprehend his majesty.")}
+
+		[animate_unit]
+			id=Bat
+			flag=levelout
+		[/animate_unit]
+		[transform_unit]
+			id=Bat
+			transform_to=Doom Bat
+		[/transform_unit]
+		[heal_unit]
+			[filter]
+				id=Bat
+			[/filter]
+		[/heal_unit]
+		[modify_unit]
+			[filter]
+				id=Bat
+			[/filter]
+			moves=0
+			max_moves=0
+		[/modify_unit]
+		[animate_unit]
+			id=Bat
+			flag=levelin
+		[/animate_unit]
+
+		[gold]
+			side=4
+			amount=200
+		[/gold]
 	[/event]
 [/scenario]
