--- a/scenarios/Entombed.cfg
+++ b/scenarios/Entombed.cfg
@@ -157,9 +157,22 @@
 			x,y=17,1
 		[/item]
 
+		[delay]
+			time=250
+		[/delay]
+
 		[message]
 			speaker=Zeth
-			message= _ "I have the skeleton! Come, let's leave by that passage behind the fortress."
+			message= _ "I have found his skeleton. It has no unusual appearance, but I do feel immense power within it."
+		[/message]
+
+		[delay]
+			time=250
+		[/delay]
+
+		[message]
+			speaker=Zeth
+			message= _ "I've got it. Come, let's leave by that passage behind the fortress."
 		[/message]
 
 		{END_VICTORY yes}
