--- a/_main.cfg
+++ b/_main.cfg
@@ -17,7 +17,7 @@
 	define=CAMPAIGN_ZITU
 	extra_defines=ENABLE_ARMAGEDDON_DRAKE,ENABLE_ROGUE_MAGE
 
-	description="{./description.txt}"
+	description=_ "{./description.txt}"
 	year="588 YW"
 
 	icon={ZITU_DATAPATH}/icon.png
