--- a/scenarios/Entombed.cfg
+++ b/scenarios/Entombed.cfg
@@ -166,6 +166,16 @@
 			message= _ "I have found his skeleton. It has no unusual appearance, but I do feel immense power within it."
 		[/message]
 
+		[message]
+			speaker=Twinkle
+			message= _ "It smells cold."
+		[/message]
+
+		[message]
+			speaker=Ked
+			message= _ "Bad smell."
+		[/message]
+
 		[delay]
 			time=250
 		[/delay]
