--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -11,6 +11,7 @@
 
 	{DEFAULT_MUSIC_PLAYLIST}
 	{COMMON_DEATHS}
+	{S_DEATH Morlan (_ "You have failed.")} {SD_WAS_HERO}
 	{DEFAULT_SCHEDULE_AFTERNOON}
 
 	[side]
@@ -91,19 +92,253 @@
 	[event]
 		name=prestart
 		{RECALL_LOYALS_5}
+
+		[item]
+			x,y=27,26
+			image=units/human-magi/silver-mage.png
+		[/item]
+		[item]
+			x,y=27,26
+			image=items/cage.png
+		[/item]
 	[/event]
 
 	[event]
 		name=start
+
+		[message]
+			speaker=Ceradia
+			message= _ "You! Because of you, the life is gone from here! We have waited on the other side of the tomb for you, and now we will take back the body of the Holy One!"
+		[/message]
+
+		{TOMB_VOICE (_ "I will not be dismissed so easily. I am eternal.")}
+
+		[message]
+			side=4
+			message= _ "The earth cracks and the waters dry, for the source of life has been taken from us."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "We're surrounded!"
+		[/message]
+
+		[message]
+			speaker=narrator
+			caption= _ "The Voice of Morri"
+			message= _ "Zeth... I have been imprisoned as they waited for you. If I can but touch the body of Abari... I can summon help from Thar-Nella."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Master Morri!"
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "Look, she's over there!"
+		[/message]
+
+		[scroll_to]
+			x,y=27,26
+		[/scroll_to]
+
+		[delay]
+			time=400
+		[/delay]
+
+		[message]
+			speaker=Zeth
+			message= _ "Then we'll need to prioritize rescuing her. These enemies don't look easy."
+		[/message]
 
 		[objectives]
 			[objective]
 				condition=win
 				description= _ "Defeat all enemy leaders."
 			[/objective]
+			{DEATH_LOSE_OBJECTIVE (_ "Death of Morlan") id=Morlan}
 			{COMMON_LOSSES}
 			{CARRYOVER_OBJECTIVE 40 yes}
 			{IS_LAST_SCENARIO}
+			[note]
+				description=_ "If Morri is rescued and moves next to Zeth, help will arrive from Thar-Nella."
+				[show_if]
+					[not]
+						[have_unit]
+							id=Morlan
+						[/have_unit]
+					[/not]
+				[/show_if]
+			[/note]
+			[note]
+				description=_ "The spirits of slain elves or naga will remain under your control."
+				[show_if]
+					[have_unit]
+						id=Morlan
+					[/have_unit]
+				[/show_if]
+			[/note]
 		[/objectives]
 	[/event]
+
+	#define TEST_BODY
+		[if]
+			[not]
+				[have_unit]
+					id=Morlan
+				[/have_unit]
+			[/not]
+			[and]
+				[have_unit]
+					id=Zeth
+					[filter_location]
+						[filter_adjacent_location]
+							[filter]
+								id=Morri
+							[/filter]
+						[/filter_adjacent_location]
+					[/filter_location]
+				[/have_unit]
+			[/and]
+			[then]
+				[message]
+					speaker=Zeth
+					message= _ "Here, Master."
+				[/message]
+
+				[message]
+					speaker=Morri
+					message= _ "Well done, Zeth. I tried to contact Thar-Nella, but I was too weak, and they didn't know where we were."
+				[/message]
+
+				{FLASH_BLUE (
+					[message]
+						speaker=Morri
+						message= _ "But now..."
+					[/message]
+				)}
+
+				{THUNDER (
+					[unit]
+						{WCHARACTER_MORLAN_DEAD}
+						placement=leader
+					[/unit]
+				)}
+
+				[message]
+					speaker=Morlan
+					message= _ "<b>...we do! In the name of Thar-Nella, your enemies shall become dust.</b>"
+				[/message]
+
+				[message]
+					speaker=Zeth
+					message= _ "Spiritmaster Morlan!"
+				[/message]
+
+				[message]
+					speaker=Morri
+					message= _ "Through the power of Abari, I summoned him."
+				[/message]
+
+				[message]
+					speaker=Morlan
+					message= _ "<b>Elves? Naga? Let the living tremble before me. The souls of our fallen enemies belong under my command.</b>"
+				[/message]
+
+				[event]
+					name=die
+					[filter]
+						race=elf,naga
+					[/filter]
+
+					[message]
+						speaker=Morlan
+						message= _ "<b>Do you think you can leave?</b>"
+					[/message]
+				[/event]
+
+				[event]
+					name=die
+					first_time_only=no
+					[filter]
+						race=elf,naga
+					[/filter]
+
+					{DIE_REPLACE {GENERIC_UNIT 1 Ghost $x1 $y1}}
+				[/event]
+
+				[show_objectives]
+				[/show_objectives]
+			[/then]
+		[/if]
+	#enddef
+
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			x,y=27,26
+		[/filter]
+
+		[remove_item]
+			x,y=27,26
+		[/remove_item]
+
+		# Create backup unit in case there is no saved Morri.
+		[unit]
+			{CHARACTER_MORRI}
+			x,y=27,26
+		[/unit]
+
+		[if]
+			[variable]
+				name=saved_morri.id
+				equals=Morri
+			[/variable]
+			[then]
+				[unstore_unit]
+					variable=saved_morri
+					x,y=27,26
+				[/unstore_unit]
+			[/then]
+		[/if]
+
+		[modify_unit]
+			[filter]
+				id=Morri
+			[/filter]
+
+			{TRAIT_MUTILATED}
+		[/modify_unit]
+
+		[message]
+			speaker=Morri
+			message= _ "I must touch the body of Abari."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Master Morri, you are still injured."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "They were cruel, but it does not matter. Quickly, the body!"
+		[/message]
+
+		{TEST_BODY}
+	[/event]
+
+	[event]
+		name=moveto
+		first_time_only=no
+		[filter]
+			id=Zeth,Morri
+		[/filter]
+
+		{TEST_BODY}
+	[/event]
+
+	#undef TEST_BODY
 [/scenario]
