Bugfixes for Emergence.

--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -222,9 +222,19 @@
 				{THUNDER (
 					[unit]
 						{WCHARACTER_MORLAN_DEAD}
+						{IS_LOYAL}
+						{IS_HERO}
 						placement=leader
 					[/unit]
 				)}
+
+				[modify_unit]
+					[filter]
+						id=Morlan
+					[/filter]
+
+					{TRAIT_LOYAL}
+				[/modify_unit]
 
 				[message]
 					speaker=Morlan
@@ -266,6 +276,16 @@
 					[/filter]
 
 					{DIE_REPLACE {GENERIC_UNIT 1 Ghost $x1 $y1}}
+
+					# Ensure the ghost can't move immediately.
+					[modify_unit]
+						[filter]
+							x,y=$x1,$y1
+						[/filter]
+
+						attacks_left=0
+						moves=0
+					[/modify_unit]
 				[/event]
 
 				[show_objectives]
