Minor dialogue change.

--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -120,7 +120,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "We're surrounded!"
+			message= _ "We're blocked in."
 		[/message]
 
 		[message]
