Cleaner ghost spawning.

--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -182,7 +182,10 @@
 		[/objectives]
 	[/event]
 
-	#define TEST_BODY
+	[event]
+		name=test body
+		first_time_only=no
+
 		[if]
 			[not]
 				[have_unit]
@@ -257,10 +260,7 @@
 				[/message]
 
 				[event]
-					name=die
-					[filter]
-						race=elf,naga
-					[/filter]
+					name=living died
 
 					[message]
 						speaker=Morlan
@@ -269,11 +269,8 @@
 				[/event]
 
 				[event]
-					name=die
+					name=living died
 					first_time_only=no
-					[filter]
-						race=elf,naga
-					[/filter]
 
 					{DIE_REPLACE {GENERIC_UNIT 1 Ghost $x1 $y1}}
 
@@ -288,11 +285,40 @@
 					[/modify_unit]
 				[/event]
 
+				[event]
+					name=living died
+
+					[message]
+						x,y=$x1,$y1
+						message= _ "I will serve you, my master."
+					[/message]
+
+					[message]
+						speaker=Zeth
+						message= _ "Let's get the ball rolling."
+					[/message]
+				[/event]
+
+				[event]
+					name=die
+					first_time_only=no
+					[filter]
+						race=elf,naga
+					[/filter]
+
+					[fire_event]
+						name=living died
+						[primary_unit]
+							x,y=$x1,$y1
+						[/primary_unit]
+					[/fire_event]
+				[/event]
+
 				[show_objectives]
 				[/show_objectives]
 			[/then]
 		[/if]
-	#enddef
+	[/event]
 
 	[event]
 		name=moveto
@@ -347,7 +373,9 @@
 			message= _ "They were cruel, but it does not matter. Quickly, the body!"
 		[/message]
 
-		{TEST_BODY}
+		[fire_event]
+			name=test body
+		[/fire_event]
 	[/event]
 
 	[event]
@@ -357,8 +385,8 @@
 			id=Zeth,Morri
 		[/filter]
 
-		{TEST_BODY}
+		[fire_event]
+			name=test body
+		[/fire_event]
 	[/event]
-
-	#undef TEST_BODY
 [/scenario]
