Animate morlan appearing.

--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -229,16 +229,22 @@
 						{IS_HERO}
 						placement=leader
 					[/unit]
+
+					[modify_unit]
+						[filter]
+							id=Morlan
+						[/filter]
+
+						{TRAIT_LOYAL}
+					[/modify_unit]
+
+					[animate_unit]
+						flag=post_teleport
+						[filter]
+							id=Morlan
+						[/filter]
+					[/animate_unit]
 				)}
-
-				[modify_unit]
-					[filter]
-						id=Morlan
-					[/filter]
-
-					{TRAIT_LOYAL}
-				[/modify_unit]
-
 				[message]
 					speaker=Morlan
 					message= _ "<b>...we do! In the name of Thar-Nella, your enemies shall become dust.</b>"
